CSS: Fix image icon alignment in collapsed menu

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -97,6 +97,12 @@
   width: 1em;
 }
 
+.collapsed #menu img.icon {
+  margin: 0 0.5em -.25em 0.25em;
+  font-size: 1.5em;
+  margin-right: 1.25em;
+}
+
 #menu .user-nav-item {
   background-color: @gray-light;
 }
